--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>精神時光屋</title>
+    <title>番茄鐘</title>
 
 </head>
 
@@ -19,6 +19,7 @@
     <div id="main">
         <div id="left">
             <input type="text" class="leftsearch" value="ADD A NEW MISSION…">
+            <input type="submit" class="addsubmit" value="+">
             <div class="bigbox"><span class="maru"></span><span class="contentbig">The First thing to do today</span>
             </div>
             <div class="title">25:00</div>
@@ -39,11 +40,13 @@
 
             <div class="more">MORE</div>
         </div>
-        <div class="cycle"><div class="cycle1"></div></div>
+        <div class="cycle"></div>
+        <div class="cycle1"></div>
+        <div class="play"></div>
         <div id="right">
-            <div class="material-icons" style="color:white;display:block;position:absolute;top:48px;right:85px">list</div>
-            <div class="material-icons" style="color:white;display: block;position:absolute;top:132px;right:85px">insert_chart</div>
-            <div class="material-icons" style="color:white;display: block;position:absolute;top:216px;right:85px">library_music</div>
+            <div class="icons1"></div>
+            <div class="icons2"></div>
+            <div class="icons3"></div>
             <div class="POMODORO">POMODORO</div>
         </div>
     </div>
