--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="cycle1"></div>
         <div class="play"></div>
         <div id="right">
-            <div class="icons1"></div>
+            <div class="icons1" onclick="location.href='todo_list.html'"></div>
             <div class="icons2"></div>
             <div class="icons3"></div>
             <div class="POMODORO">POMODORO</div>
