--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
+    <!-- animate css -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
     <title>番茄鐘</title>
 
 </head>
@@ -18,6 +20,7 @@
 <body>
     <div id="main">
         <div id="left">
+
             <input type="text" class="leftsearch" value="ADD A NEW MISSION…">
             <input type="submit" class="addsubmit" value="+">
             <div class="bigbox"><span class="maru"></span><span class="contentbig">The First thing to do today</span>
@@ -44,7 +47,7 @@
         <div class="cycle1"></div>
         <div class="play"></div>
         <div id="right">
-            <div class="icons1" onclick="location.href='todo_list.html'"></div>
+            <i class="icons1" onclick="location.href='todo_list.html'"></i>
             <div class="icons2"></div>
             <div class="icons3"></div>
             <div class="POMODORO">POMODORO</div>
