--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="cycle1"></div>
         <div class="play"></div>
         <div id="right">
-            <i class="icons1" onclick="location.href='todo_list.html'"></i>
+            <i class="icons1" onclick="location.href='http://htmlpreview.github.io/?https://github.com/kaworu0108/POMODORO/blob/master/todo_list.html'"></i>
             <div class="icons2"></div>
             <div class="icons3"></div>
             <div class="POMODORO">POMODORO</div>
