--- a/todo_list.html
+++ b/todo_list.html
@@ -36,7 +36,7 @@
         </div>
         <div class="right">
             <input type="text" class="search" value="ADD A NEW MISSION…">
-            <img src="img/baseline_close_black_48dp.png" alt="替代文字" style=" width: 48px;height: 48px;background:#FFF; position: relative;top:48px;margin-right:25px;" class="close" onclick="location.href='index.html'">
+            <img src="img/baseline_close_black_48dp.png" alt="替代文字" style=" width: 48px;height: 48px;background:#FFF; position: relative;top:48px;margin-right:25px;" class="close" onclick="location.href='http://htmlpreview.github.io/?https://github.com/kaworu0108/POMODORO/blob/master/index.html'">
             <div class="todo">to-do</div>
             <div class="contentbox">
                 <span class="cyclesmall"> </span>
